infrastructure/gitlab-omnibus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ce-web
  namespace: gitlab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitlab.school.local`)
      kind: Rule
      services:
        - name: gitlab-ce
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ce-registry
  namespace: gitlab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`registry.school.local`)
      kind: Rule
      services:
        - name: gitlab-ce
          port: 5000
